Navigation bar fixed. Instructor files added. Div places tryed to be fixed. It is not fixed entirely. General information still overlap.

--- a/Project_DBMS/templates/instructor_course_program.html
+++ b/Project_DBMS/templates/instructor_course_program.html
@@ -9,8 +9,8 @@
     <body>
         <!--Navigation Bar-->
         <ul>
-            <li><a href="/studentInfo">Home</a></li>
-            <li><a class="active" href="./studentCourseProgram">Course Program</a></li>
+            <li><a href="/instructorInfo">Home</a></li>
+            <li><a class="active" href="/instructorCourseProgram">Course Program</a></li>
             <li><a href="#contact">Contact</a></li>
             <li><a href="#about">About</a></li>
         </ul>
@@ -65,7 +65,7 @@
                 <td></td>
             </tr>
             <tr>
-                <th>11.00-11.50/th>
+                <th>11.00-11.50</th>
                 <td></td>
                 <td></td>
                 <td></td>
