--- a/Project_DBMS/templates/instructor_general_info.html
+++ b/Project_DBMS/templates/instructor_general_info.html
@@ -3,45 +3,59 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Genel Bilgiler</title>
+    <title>General Information</title>
+    <link href="../static/navigation_bar.css" rel="stylesheet">
   </head>
-  <div class="student-profile py-4">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-4">
-          <div class="card shadow-sm">
-            <div class="card-header bg-transparent text-center">
-              <h3>NULL(Instructor name)</h3>
+  <body>
+
+    <!--Navigation Bar-->
+    <div>
+      <ul>
+        <li><a class="active" href="/instructorInfo">Home</a></li>
+        <li><a href="/instructorCourseProgram">Course Program</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
+
+    <div class="student-profile py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="card shadow-sm">
+              <div class="card-header bg-transparent text-center">
+                <h3>NULL(Instructor name)</h3>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-8">
-          <div class="card shadow-sm">
-            <div class="card-header bg-transparent border-0">
-              <h3 class="mb-0"><i class="far fa-clone pr-1"></i>General Information</h3>
-            </div>
-            <div class="card-body pt-0">
-              <table class="table table-bordered">
-                <tr>
-                  <th width="30%">Instructor ID</th>
-                  <td width="2%">:</td>
-                  <td>NULL</td>
-                </tr>
-                <tr>
-                  <th width="30%">E-mail</th>
-                  <td width="2%">:</td>
-                  <td>NULL</td>
-                </tr>
-                <tr>
-                  <th width="30%">Office No</th>
-                  <td width="2%">:</td>
-                  <td>NULL</td>
-                </tr>
-              </table>
+          <div class="col-lg-8">
+            <div class="card shadow-sm">
+              <div class="card-header bg-transparent border-0">
+                <h3 class="mb-0"><i class="far fa-clone pr-1"></i>General Information</h3>
+              </div>
+              <div class="card-body pt-0">
+                <table class="table table-bordered">
+                  <tr>
+                    <th width="30%">Instructor ID</th>
+                    <td width="2%">:</td>
+                    <td>NULL</td>
+                  </tr>
+                  <tr>
+                    <th width="30%">E-mail</th>
+                    <td width="2%">:</td>
+                    <td>NULL</td>
+                  </tr>
+                  <tr>
+                    <th width="30%">Office No</th>
+                    <td width="2%">:</td>
+                    <td>NULL</td>
+                  </tr>
+                </table>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </body>
 </html> 
