Dynamic table for student notes. Array needs to be modified in script.

--- a/Project_DBMS/templates/student_general_info.html
+++ b/Project_DBMS/templates/student_general_info.html
@@ -11,7 +11,7 @@
     <ul>
       <li><a class="active" href="/studentInfo">Home</a></li>
       <li><a href="./studentCourseProgram">Course Program</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="/studentNote">Notes</a></li>
       <li><a href="#about">About</a></li>
     </ul>
 
@@ -21,6 +21,7 @@
           <div class="col-lg-4">
             <div class="card shadow-sm">
               <div class="card-header bg-transparent text-center">
+                <h3>Yama</h3>
                 <h3>NULL(Student name)</h3>
               </div>
             </div>
