--- a/Project_DBMS/templates/instructor_general_info.html
+++ b/Project_DBMS/templates/instructor_general_info.html
@@ -24,6 +24,7 @@
           <div class="col-lg-4">
             <div class="card shadow-sm">
               <div class="card-header bg-transparent text-center">
+                <h3>Yama</h3>
                 <h3>NULL(Instructor name)</h3>
               </div>
             </div>
