Dropdown menu is ready for selecting courses. After that student has to be selected and a form must be appeared. Data needs to be transmitted as well.

--- a/Project_DBMS/templates/instructor_course_program.html
+++ b/Project_DBMS/templates/instructor_course_program.html
@@ -11,7 +11,7 @@
         <ul>
             <li><a href="/instructorInfo">Home</a></li>
             <li><a class="active" href="/instructorCourseProgram">Course Program</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="/instructorNote">Note</a></li>
             <li><a href="#about">About</a></li>
         </ul>
 
