--- a/Project_DBMS/templates/instructor_general_info.html
+++ b/Project_DBMS/templates/instructor_general_info.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a class="active" href="/instructorInfo">Home</a></li>
         <li><a href="/instructorCourseProgram">Course Program</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/instructorNote">Note</a></li>
         <li><a href="#about">About</a></li>
       </ul>
     </div>
