Non-tested sign in backend method.

--- a/Project_DBMS/templates/index.html
+++ b/Project_DBMS/templates/index.html
@@ -18,7 +18,7 @@
                 
                 <div class="login-form">
                     <div class="sign-in-htm">
-                        <form action="{{ url_for('studentInfo') }}" method="post">
+                        <form action="{{ url_for('loginRedirect') }}" method="post">
                             <div class="group">
                                 <label for="user" class="label">Username</label>
                                 <input id="user" type="text" class="input">
