--- a/Project_DBMS/templates/index.html
+++ b/Project_DBMS/templates/index.html
@@ -3,8 +3,6 @@
 <html lang="en">
     <head>
         <title type>Ali&Alper Advancement of Humanity University</title>
-        <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">
         <link href="../static/signUp.css" rel="stylesheet">
     </head>
     <body>
@@ -21,15 +19,11 @@
                         <form action="{{ url_for('loginRedirect') }}" method="post">
                             <div class="group">
                                 <label for="user" class="label">Username</label>
-                                <input id="user" type="text" class="input">
+                                <input id="user" name="username" type="text" class="input">
                             </div>
                             <div class="group">
                                 <label for="pass" class="label">Password</label>
-                                <input id="pass" type="password" class="input" data-type="password">
-                            </div>
-                            <div class="group">
-                                <input id="check" type="checkbox" class="check" checked>
-                                <label for="check"><span class="icon"></span> Keep me Signed in</label>
+                                <input id="pass" name="password" type="password" class="input" data-type="password">
                             </div>
                             <div class="group">
                                 <input type="submit" class="button" value="Sign In" name="signIn">
