--- a/Project_DBMS/static/navigation_bar.css
+++ b/Project_DBMS/static/navigation_bar.css
@@ -1,6 +1,9 @@
-body {margin:0;}
+body {
+    margin: 0;
+    padding-top: 50px;
+}
 
-ul {
+.navbar-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -11,11 +14,11 @@ ul {
     width: 100%;
 }
 
-li {
+.navbar-list > li {
     float: left;
 }
 
-li a {
+.navbar-list > li > a {
     display: block;
     color: white;
     text-align: center;
@@ -23,7 +26,7 @@ li a {
     text-decoration: none;
 }
 
-li a:hover:not(.active) {
+.navbar-list > li > a:hover:not(.active) {
     background-color: #111;
 }
 
