--- a/Project_DBMS/templates/index.html
+++ b/Project_DBMS/templates/index.html
@@ -16,6 +16,9 @@
                 
                 <div class="login-form">
                     <div class="sign-in-htm">
+                        {% if err_message %}
+                            <p style="color:rgb(223, 17, 17);">{{ err_message }}</p>
+                        {% endif %}
                         <form action="{{ url_for('loginRedirect') }}" method="post">
                             <div class="group">
                                 <label for="user" class="label">Username</label>
@@ -34,31 +37,6 @@
                             <a href="#forgot">Forgot Password?</a>
                         </div>
                     </div>
-                
-                    <div class="sign-up-htm">
-                        <div class="group">
-                            <label for="user" class="label">Username</label>
-                            <input id="user" type="text" class="input">
-                        </div>
-                        <div class="group">
-                            <label for="pass" class="label">Password</label>
-                            <input id="pass" type="password" class="input" data-type="password">
-                        </div>
-                        <div class="group">
-                            <label for="pass" class="label">Repeat Password</label>
-                            <input id="pass" type="password" class="input" data-type="password">
-                        </div>
-                        <div class="group">
-                            <label for="pass" class="label">Email Address</label>
-                            <input id="pass" type="text" class="input">
-                        </div>
-                        <div class="group">
-                            <input type="submit" class="button" value="Sign Up">
-                        </div>
-                        <div class="hr"></div>
-                        <div class="foot-lnk">
-                            <label for="tab-1">Already Member?</a>
-                        </div>
                     </div>
                 </div>
             </div>
