--- a/Project_DBMS/templates/student_exams.html
+++ b/Project_DBMS/templates/student_exams.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Student Notes</title>
+        <title>Student Exams</title>
         <link href="../static/navigation_bar.css" rel="stylesheet">
         <noscript>Try another browser that supports Javascript.</noscript>
     </head>
@@ -11,25 +11,24 @@
         <ul class="navbar-list">
             <li><a href="/studentInfo">Home</a></li>
             <li><a href="/studentCourseProgram">Course Program</a></li>
-            <li><a class="active" href="/studentNote">Notes</a></li>
+            <li><a href="/studentNote">Notes</a></li>
             <li><a href="/sCourseSelection">Course Selection</a></li>
-            <li> <a href="/studentExams">Exam Dates</a></li>
+            <li><a class="active" href="/studentExams">Exam Dates</a></li>
             <li><a href="/logout">Logout</a></li>
         </ul>
         <!--Program-->
-        </br>
         <table>
             <thead>
                 <tr>
-                    <th>Course</th>
-                    <th>Note</th>
+                    <th>Exams</th>
+                    <th>Dates</th>
                 </tr>
             </thead>
             <tbody>
-                {% for course, note in courses_and_notes %}
+                {% for exam, date in exams_and_dates %}
                 <tr>
-                    <td>{{ course }}</td>
-                    <td>{{ note }}</td>
+                    <td>{{ exam }}</td>
+                    <td>{{ date }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
